clusters/homelab/firefly3/node-selectors.yaml
# Heavy compute nodes for DB and App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-firefly-db-postgre-db
spec:
  template:
    spec:
      nodeSelector:
        node-role.kubernetes.io/heavy-compute: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-firefly-iii
spec:
  template:
    spec:
      nodeSelector:
        node-role.kubernetes.io/heavy-compute: "true"
---
# Light compute nodes for Importer and Backup
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-importer
spec:
  template:
    spec:
      nodeSelector:
        node-role.kubernetes.io/light-compute: "true"
