clusters/homelab/firefly3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii
  namespace: firefly
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  ingressClassName: traefik
  rules:
    - host: firefly.henryhalldev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-firefly-iii
                port:
                  number: 80
